add function OnClick

--- a/Pos/AndroidManifest.xml
+++ b/Pos/AndroidManifest.xml
@@ -22,6 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="Add_Activity"></activity>
+        <activity android:name="Remove_Activity"></activity>
     </application>
 
 </manifest>
