--- a/Pos/bin/AndroidManifest.xml
+++ b/Pos/bin/AndroidManifest.xml
@@ -25,6 +25,10 @@
         <activity android:name="Add_Activity"></activity>
         <activity android:name="Remove_Activity"></activity>
         <activity android:name="Sale_Activity"></activity>
+        <activity android:name="Tab_Inventory_Activity">
+        </activity>
+        <activity android:name="Tab_Product_Activity"></activity>
+        <activity android:name="Tab_Sale_Activity"></activity>
     </application>
 
 </manifest>
