--- a/Pos/bin/AndroidManifest.xml
+++ b/Pos/bin/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name="Inventory_editItem"></activity>
         <activity android:name="ProductItem_Info"></activity>
         <activity android:name="ProductItem_Edit"></activity>
+        <activity android:name="Inventory_Edit"></activity>
     </application>
 
 </manifest>
