--- a/Pos/bin/AndroidManifest.xml
+++ b/Pos/bin/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name="ProductItem_Info"></activity>
         <activity android:name="ProductItem_Edit"></activity>
         <activity android:name="Inventory_Edit"></activity>
+        <activity android:name="Product_Edit"></activity>
     </application>
 
 </manifest>
