add function report

--- a/Pos/AndroidManifest.xml
+++ b/Pos/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name="ProductItem_Edit"></activity>
         <activity android:name="Inventory_Edit"></activity>
         <activity android:name="Product_Edit"></activity>
+        <activity android:name="Sale_Report"></activity>
     </application>
 
 </manifest>
