--- a/Pos/bin/AndroidManifest.xml
+++ b/Pos/bin/AndroidManifest.xml
@@ -41,7 +41,9 @@
         <activity android:name="com.gui_report_sale.pos.Sale_Report_YearlyListView"></activity>
         <activity android:name="com.gui_report_sale.pos.Sale_Report_DailyListView"></activity>
         <activity android:name="com.gui_tab_inventory.pos.Tab_Inventory_Activity"></activity>
-        <activity android:name="com.gui_report_sale.pos.Sale_Report_Bill"></activity>
+        <activity android:name="com.gui_report_sale.pos.Sale_Report_DailyBill"></activity>
+        <activity android:name="com.gui_report_sale.pos.Sale_Report_MonthlyBill"></activity>
+        <activity android:name="com.gui_report_sale.pos.Sale_Report_YearlyBill"></activity>
     </application>
 
 </manifest>
